--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -64,7 +64,7 @@ jobs:
         run: |
           git config user.name ${{ secrets.DAIS_MACHINE_GITHUB_USERNAME }}
           git config user.email ${{ secrets.DAIS_MACHINE_GITHUB_EMAIL }}
-          npm install -g bit
+          npm i -g bit-bin@14.8.8
           gitLog=$(git log -1 --pretty=%B | sed s/\'/\"/ | sed s/\"/\'/ | sed s/'→'/'->'/)
           npm ci
           npm run test
