--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -90,7 +90,7 @@ jobs:
               echo 'n' | bit add src/shared/*.js
               echo 'n' | bit add src/utils/*.js
               echo 'n' | bit tag --all
-              echo 'n' |bit export dais-technology.react
+              echo 'n' |bit export --eject dais-technology.react
               npm publish
               git push origin $default_branch --tags
             fi
