--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -88,11 +88,7 @@ jobs:
               echo "New version is $version"
               default_branch=$(git branch --show-current)
               if [[ "$repositoryName" == "shared-react-scaffolding" ]]; then
-                echo 'n' | bit add src/components/*
-                echo 'n' | bit add src/shared/*.js
-                echo 'n' | bit add src/utils/*.js
-                echo 'n' | bit tag --all
-                echo 'n' | bit export dais-technology.react
+                npm run build
               fi
               npm publish
               git push origin $default_branch --tags
