--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -95,9 +95,10 @@ jobs:
               default_branch=$(git branch --show-current)
               if [[ "$repositoryName" == "shared-react-scaffolding" ]]; then
                 npm run build
+              fi
+              if [[ "$repositoryName" == "ioi-product-clean-answers" ||  "$repositoryName" == "shared-react-scaffolding" ]]; then
                 npm publish
               fi
-
               git push origin $default_branch --tags
             fi
 
