--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -201,5 +201,5 @@ jobs:
             if [[ "$seleniumUrl" == *"lambdatest"* ]]; then
               echo "Selenium E2E test success video recordings can be found https://automation.lambdatest.com/timeline/?viewType=build&page=1&status=passed&build=${env.BUILD_TAG}"
             else
-              echo "Selenium E2E test success video recordings can be found http://zalenium.service.dev.dais.com/dashboard/?q=${env.BUILD_TAG}%20success\"
+              echo "Selenium E2E test success video recordings can be found http://zalenium.service.dev.dais.com/dashboard/?q=${env.BUILD_TAG}%20success"
             fi
