--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -119,7 +119,7 @@ jobs:
             echo "::set-output name=gitLog::$gitLog"
           fi
       - name: Create Application and Pipelines - JM
-        if: (github.ref == 'refs/heads/master' || github.ref == 'refs/heads/develop') || inputs.hotfix
+        if: (github.ref == 'refs/heads/master' || github.ref == 'refs/heads/develop') || github.ref == 'refs/heads/e2etests') || inputs.hotfix
         id: create-app-and-pipelines-jm
         uses: gagoar/invoke-aws-lambda@master
         with:
@@ -141,7 +141,7 @@ jobs:
           FunctionName: spinnaker-pipelines-dev-deployer
           Payload: '{"application": "${{ steps.npm-build.outputs.projectName }}", "template": "web-application", "account": "DAIS"}' 
       - name: Build, tag, and push docker image to Amazon ECR
-        if: (github.ref == 'refs/heads/master' || github.ref == 'refs/heads/develop') || inputs.hotfix    
+        if: (github.ref == 'refs/heads/master' || github.ref == 'refs/heads/develop') || github.ref == 'refs/heads/e2etests' || inputs.hotfix    
         env:
           REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           REPOSITORY: ${{ steps.npm-build.outputs.projectName }} 
@@ -156,7 +156,7 @@ jobs:
           docker build -t $REGISTRY/$REPOSITORY:$VERSION --build-arg AWS_ACCESS_KEY_ID=${{ secrets.ACTIONS_AWS_ACCESS_KEY_ID }} --build-arg AWS_SECRET_ACCESS_KEY=${{ secrets.ACTIONS_AWS_SECRET_ACCESS_KEY }} --build-arg NPM_TOKEN_READ=${{ secrets.NPM_TOKEN }} --build-arg FONTAWESOME_TOKEN=${{ secrets.FONTAWESOME_TOKEN }} --build-arg BIT_AUTH_TOKEN=${{ secrets.BIT_AUTH_TOKEN }} --build-arg VUE_APP_SMARTY_STREETS_KEY=${{ secrets.VUE_APP_SMARTY_STREETS_KEY }} --build-arg AG_GRID_LICENSE_KEY='${{ secrets.AG_GRID_LICENSE_KEY }}' .
           docker push $REGISTRY/$REPOSITORY:$VERSION          
       - name: Push values.yaml to DAIS S3
-        if: (github.ref == 'refs/heads/master' || github.ref == 'refs/heads/develop') || inputs.hotfix
+        if: (github.ref == 'refs/heads/master' || github.ref == 'refs/heads/develop') || github.ref == 'refs/heads/e2etests' || inputs.hotfix
         run: |
           cat templateValues.yaml > values-${VERSION}.yaml
           echo 'image: ' >> values-${VERSION}.yaml
@@ -171,7 +171,7 @@ jobs:
           VERSION: ${{ steps.npm-build.outputs.imageVersion }}
           PROJECT_NAME: ${{ steps.npm-build.outputs.projectName }}
       - name: Deploy To Dev
-        if: (github.ref == 'refs/heads/master' || github.ref == 'refs/heads/develop') || inputs.hotfix
+        if: (github.ref == 'refs/heads/master' || github.ref == 'refs/heads/develop') || github.ref == 'refs/heads/e2etests' || inputs.hotfix
         id: deploy-to-dev
         uses: gagoar/invoke-aws-lambda@master
         with:
