--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -70,7 +70,30 @@ jobs:
       - name: Login to Amazon ECR
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
-      - run: aws sts get-caller-identity          
+      - run: aws sts get-caller-identity
+      - name: Run E2E Tests
+        if: (github.ref != 'refs/heads/master' && github.ref != 'refs/heads/develop') || github.ref == 'refs/heads/e2etests' || inputs.runE2ETests
+        run: |
+          if [[ "${{ inputs.runE2ETests }}" == "true" ]]; then
+            echo "Selenium Tests - ${{ inputs.browser }}"
+            npm i
+            repo='${{ steps.npm-build.outputs.projectName }}'
+            seleniumUrl=${{ inputs.ACTIONS_SE_GRID }}
+            if [[ "${{ inputs.browser }}" == "ie" || "${{ inputs.browser }}" == "all" ]]; then
+              seleniumUrl=${{ inputs.GRID_LAMBDA_URL }}
+              DAIS_ENV=${{ inputs.environment }} ROOT_URL=${{ inputs.applicationUrl }} REMOTE_SERVER_URL=$seleniumUrl E2E_BROWSER=${{ inputs.browser }} npm run test:e2e
+            elif [[ "${{ inputs.browser  }}" != "all" ]]; then
+              DAIS_ENV=${{ inputs.environment }} ROOT_URL=${{ inputs.applicationUrl }} REMOTE_SERVER_URL=$seleniumUrl E2E_BROWSER=${{ inputs.browser }} npm run test:e2e
+            else
+              DAIS_ENV=${{ inputs.environment }} ROOT_URL=${{ inputs.applicationUrl }} REMOTE_SERVER_URL=$seleniumUrl E2E_BROWSER=firefox npm run test:e2e
+              DAIS_ENV=${{ inputs.environment }} ROOT_URL=${{ inputs.applicationUrl }} REMOTE_SERVER_URL=$seleniumUrl E2E_BROWSER=chrome npm run test:e2e
+            fi
+            if [[ "$seleniumUrl" == *"lambdatest"* ]]; then
+              echo "Selenium E2E test success video recordings can be found https://automation.lambdatest.com/timeline/?viewType=build&page=1&status=passed&build=${env.BUILD_TAG}"
+            else
+              echo "Selenium E2E test success video recordings can be found http://zalenium.service.dev.dais.com/dashboard/?q=${env.BUILD_TAG}%20success"
+            fi
+          fi           
       - name: Install Dependencies and Run Unit Tests
         id: npm-build
         env:
@@ -191,7 +214,7 @@ jobs:
             if [[ "${{ inputs.browser }}" == "ie" || "${{ inputs.browser }}" == "all" ]]; then
               seleniumUrl=${{ inputs.GRID_LAMBDA_URL }}
               DAIS_ENV=${{ inputs.environment }} ROOT_URL=${{ inputs.applicationUrl }} REMOTE_SERVER_URL=$seleniumUrl E2E_BROWSER=${{ inputs.browser }} npm run test:e2e
-            else if [[ "${{ inputs.browser  }}" != "all" ]]; then
+            elif [[ "${{ inputs.browser  }}" != "all" ]]; then
               DAIS_ENV=${{ inputs.environment }} ROOT_URL=${{ inputs.applicationUrl }} REMOTE_SERVER_URL=$seleniumUrl E2E_BROWSER=${{ inputs.browser }} npm run test:e2e
             else
               DAIS_ENV=${{ inputs.environment }} ROOT_URL=${{ inputs.applicationUrl }} REMOTE_SERVER_URL=$seleniumUrl E2E_BROWSER=firefox npm run test:e2e
