--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -84,7 +84,8 @@ jobs:
           if [[ "true" == "true" ]]; then
             echo "Selenium Tests - ${{ inputs.browser }}"
             npm i jest-stare
-            npm i
+            npm ci
+            npm run test
             repo='${{ steps.npm-build.outputs.projectName }}'
             seleniumUrl=${{ inputs.ACTIONS_SE_GRID }}
             if [[ "${{ inputs.browser }}" == "ie" || "${{ inputs.browser }}" == "all" ]]; then
