--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -83,6 +83,7 @@ jobs:
         run: |
           if [[ "true" == "true" ]]; then
             echo "Selenium Tests - ${{ inputs.browser }}"
+            npm i jest-stare
             npm ci
             npm run test
             repo='${{ steps.npm-build.outputs.projectName }}'
