--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -10,11 +10,11 @@ on:
         type: boolean
         default: false
       account:
-        required: false      
+        required: false
         type: string
         default: "DAIS_JM"
       environment:
-        required: false      
+        required: false
         type: string
         default: "dev"
       runE2ETests:
@@ -22,25 +22,25 @@ on:
         type: boolean
         default: false
       browser:
-        required: false      
+        required: false
         type: string
         default: "ie"
       applicationUrl:
-        required: false      
+        required: false
         type: string
         default: ""
       run_tests:
-        required: false      
+        required: false
         type: boolean
         default: true
       node_version:
-        required: false      
+        required: false
         type: string
-        default: '14.21.0'         
+        default: "14.21.0"
   workflow_dispatch:
 permissions:
-      id-token: write
-      contents: read
+  id-token: write
+  contents: read
 jobs:
   build:
     if: github.actor != 'dais-machine'
@@ -59,7 +59,7 @@ jobs:
         env:
           JIRA_BASE_URL: ${{ secrets.JIRA_BASE_URL }}
           JIRA_USER_EMAIL: ${{ secrets.JIRA_USER_EMAIL }}
-          JIRA_API_TOKEN: ${{ secrets.JIRA_API_TOKEN }}     
+          JIRA_API_TOKEN: ${{ secrets.JIRA_API_TOKEN }}
       - name: Find in commit messages
         uses: atlassian/gajira-find-issue-key@master
         with:
@@ -68,7 +68,7 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: ${{ inputs.node_version }}
-          registry-url: 'https://registry.npmjs.org'
+          registry-url: "https://registry.npmjs.org"
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
@@ -78,7 +78,7 @@ jobs:
       - name: Login to Amazon ECR
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
-      - run: aws sts get-caller-identity          
+      - run: aws sts get-caller-identity
       - name: Install Dependencies and Run Unit Tests
         id: npm-build
         env:
@@ -87,7 +87,7 @@ jobs:
           FONTAWESOME_TOKEN: ${{ secrets.FONTAWESOME_TOKEN }}
           BIT_AUTH_TOKEN: ${{ secrets.BIT_AUTH_TOKEN }}
           AWS_ACCESS_KEY_ID: ${{ secrets.ACTIONS_AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.ACTIONS_AWS_SECRET_ACCESS_KEY }}        
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.ACTIONS_AWS_SECRET_ACCESS_KEY }}
         run: |
           git config user.name ${{ secrets.DAIS_MACHINE_GITHUB_USERNAME }}
           git config user.email ${{ secrets.DAIS_MACHINE_GITHUB_EMAIL }}
@@ -128,40 +128,40 @@ jobs:
             echo "::set-output name=projectName::$repositoryName"
             echo "::set-output name=gitLog::$gitLog"
           fi
-      - name: Create Application and Pipelines - JM
-        if: (github.ref == 'refs/heads/master' || github.ref == 'refs/heads/develop') || inputs.hotfix
-        id: create-app-and-pipelines-jm
-        uses: gagoar/invoke-aws-lambda@master
-        with:
-          AWS_ACCESS_KEY_ID: ${{ secrets.ACTIONS_AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.ACTIONS_AWS_SECRET_ACCESS_KEY }}
-          REGION: ${{ secrets.ACTIONS_AWS_REGION }}
-          InvocationType: Event
-          FunctionName: spinnaker-pipelines-dev-deployer
-          Payload: '{"application": "${{ steps.npm-build.outputs.projectName }}", "template": "web-application", "account": "JM"}' 
-      - name: Create Application and Pipelines - DAIS
-        if: (github.ref == 'refs/heads/master' || github.ref == 'refs/heads/develop') || inputs.hotfix
-        id: create-app-and-pipelines-dais
-        uses: gagoar/invoke-aws-lambda@master
-        with:
-          AWS_ACCESS_KEY_ID: ${{ secrets.ACTIONS_AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.ACTIONS_AWS_SECRET_ACCESS_KEY }}
-          REGION: ${{ secrets.ACTIONS_AWS_REGION }}
-          InvocationType: Event
-          FunctionName: spinnaker-pipelines-dev-deployer
-          Payload: '{"application": "${{ steps.npm-build.outputs.projectName }}", "template": "web-application", "account": "DAIS"}' 
+      # - name: Create Application and Pipelines - JM
+      #   if: (github.ref == 'refs/heads/master' || github.ref == 'refs/heads/develop') || inputs.hotfix
+      #   id: create-app-and-pipelines-jm
+      #   uses: gagoar/invoke-aws-lambda@master
+      #   with:
+      #     AWS_ACCESS_KEY_ID: ${{ secrets.ACTIONS_AWS_ACCESS_KEY_ID }}
+      #     AWS_SECRET_ACCESS_KEY: ${{ secrets.ACTIONS_AWS_SECRET_ACCESS_KEY }}
+      #     REGION: ${{ secrets.ACTIONS_AWS_REGION }}
+      #     InvocationType: Event
+      #     FunctionName: spinnaker-pipelines-dev-deployer
+      #     Payload: '{"application": "${{ steps.npm-build.outputs.projectName }}", "template": "web-application", "account": "JM"}'
+      # - name: Create Application and Pipelines - DAIS
+      #   if: (github.ref == 'refs/heads/master' || github.ref == 'refs/heads/develop') || inputs.hotfix
+      #   id: create-app-and-pipelines-dais
+      #   uses: gagoar/invoke-aws-lambda@master
+      #   with:
+      #     AWS_ACCESS_KEY_ID: ${{ secrets.ACTIONS_AWS_ACCESS_KEY_ID }}
+      #     AWS_SECRET_ACCESS_KEY: ${{ secrets.ACTIONS_AWS_SECRET_ACCESS_KEY }}
+      #     REGION: ${{ secrets.ACTIONS_AWS_REGION }}
+      #     InvocationType: Event
+      #     FunctionName: spinnaker-pipelines-dev-deployer
+      #     Payload: '{"application": "${{ steps.npm-build.outputs.projectName }}", "template": "web-application", "account": "DAIS"}'
       - name: Build, tag, and push docker image to Amazon ECR
-        if: (github.ref == 'refs/heads/master' || github.ref == 'refs/heads/develop') || inputs.hotfix    
+        if: (github.ref == 'refs/heads/master' || github.ref == 'refs/heads/develop') || inputs.hotfix
         env:
           REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          REPOSITORY: ${{ steps.npm-build.outputs.projectName }} 
-          VERSION: ${{ steps.npm-build.outputs.imageVersion }}    
+          REPOSITORY: ${{ steps.npm-build.outputs.projectName }}
+          VERSION: ${{ steps.npm-build.outputs.imageVersion }}
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
           NPM_TOKEN_READ: ${{ secrets.NPM_TOKEN }}
           FONTAWESOME_TOKEN: ${{ secrets.FONTAWESOME_TOKEN }}
-          BIT_AUTH_TOKEN: ${{ secrets.BIT_AUTH_TOKEN }}     
+          BIT_AUTH_TOKEN: ${{ secrets.BIT_AUTH_TOKEN }}
           AWS_ACCESS_KEY_ID: ${{ secrets.ACTIONS_AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.ACTIONS_AWS_SECRET_ACCESS_KEY }}          
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.ACTIONS_AWS_SECRET_ACCESS_KEY }}
         run: |
           docker build -t $REGISTRY/$REPOSITORY:$VERSION --build-arg AWS_ACCESS_KEY_ID=${{ secrets.ACTIONS_AWS_ACCESS_KEY_ID }} --build-arg AWS_SECRET_ACCESS_KEY=${{ secrets.ACTIONS_AWS_SECRET_ACCESS_KEY }} --build-arg NPM_TOKEN_READ=${{ secrets.NPM_TOKEN }} --build-arg FONTAWESOME_TOKEN=${{ secrets.FONTAWESOME_TOKEN }} --build-arg BIT_AUTH_TOKEN=${{ secrets.BIT_AUTH_TOKEN }} --build-arg VUE_APP_SMARTY_STREETS_KEY=${{ secrets.VUE_APP_SMARTY_STREETS_KEY }} --build-arg AG_GRID_LICENSE_KEY='${{ secrets.AG_GRID_LICENSE_KEY }}' .
           docker push $REGISTRY/$REPOSITORY:$VERSION
@@ -170,7 +170,7 @@ jobs:
         if: failure()
         with:
           name: npm-logs
-          path: ~/.npm/_logs          
+          path: ~/.npm/_logs
       - name: Push values.yaml to DAIS S3
         if: (github.ref == 'refs/heads/master' || github.ref == 'refs/heads/develop') || inputs.hotfix
         run: |
@@ -195,7 +195,7 @@ jobs:
           AWS_SECRET_ACCESS_KEY: ${{ secrets.ACTIONS_AWS_SECRET_ACCESS_KEY }}
           REGION: ${{ secrets.ACTIONS_AWS_REGION }}
           FunctionName: spinnaker-trigger-dev-deployer
-          Payload: '{"application": "${{ steps.npm-build.outputs.projectName }}", "tag": "${{ steps.npm-build.outputs.imageVersion }}", "gitLog": "${{ steps.npm-build.outputs.gitLog }}", "repositoryName": "${{ github.repository }}", "account": "${{ inputs.account }}", "environment": "${{ inputs.environment }}"}' 
+          Payload: '{"application": "${{ steps.npm-build.outputs.projectName }}", "tag": "${{ steps.npm-build.outputs.imageVersion }}", "gitLog": "${{ steps.npm-build.outputs.gitLog }}", "repositoryName": "${{ github.repository }}", "account": "${{ inputs.account }}", "environment": "${{ inputs.environment }}"}'
       - name: Run E2E Tests
         if: (github.ref != 'refs/heads/master' && github.ref != 'refs/heads/develop') || inputs.runE2ETests
         run: |
